testdb/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> update_statement
Rule 2     statement -> select_statement
Rule 3     statement -> delete_statement
Rule 4     update_statement -> UPDATE ID SET set_clause_list EOL
Rule 5     update_statement -> UPDATE ID SET set_clause_list WHERE search_condition EOL
Rule 6     select_statement -> SELECT select_columns FROM id_list EOL
Rule 7     select_statement -> SELECT select_columns FROM id_list join_clause EOL
Rule 8     select_statement -> SELECT select_columns FROM id_list WHERE search_condition EOL
Rule 9     select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
Rule 10    delete_statement -> DELETE FROM ID EOL
Rule 11    delete_statement -> DELETE FROM ID WHERE search_condition EOL
Rule 12    select_columns -> ALL
Rule 13    select_columns -> id_list
Rule 14    set_clause_list -> ID EQ literal
Rule 15    set_clause_list -> ID EQ literal COMMA set_clause_list
Rule 16    join_clause -> NATURAL JOIN ID
Rule 17    join_clause -> NATURAL JOIN ID join_clause
Rule 18    join_clause -> join_list
Rule 19    join_clause -> join_list ON join_value GT join_value
Rule 20    join_clause -> join_list ON join_value GT join_value join_clause
Rule 21    join_clause -> join_list ON join_value GT join_value join_search_condition
Rule 22    join_clause -> join_list ON join_value LT join_value
Rule 23    join_clause -> join_list ON join_value LT join_value join_clause
Rule 24    join_clause -> join_list ON join_value LT join_value join_search_condition
Rule 25    join_clause -> join_list ON join_value NEQ join_value
Rule 26    join_clause -> join_list ON join_value NEQ join_value join_clause
Rule 27    join_clause -> join_list ON join_value NEQ join_value join_search_condition
Rule 28    join_clause -> join_list ON join_value EQ join_value
Rule 29    join_clause -> join_list ON join_value EQ join_value join_clause
Rule 30    join_clause -> join_list ON join_value EQ join_value join_search_condition
Rule 31    join_list -> JOIN ID
Rule 32    join_list -> JOIN ID join_list
Rule 33    join_value -> ID
Rule 34    join_value -> ID DOT ID
Rule 35    join_value -> literal
Rule 36    join_search_condition -> AND join_search_condition
Rule 37    join_search_condition -> OR join_search_condition
Rule 38    join_search_condition -> LPAREN join_search_condition RPAREN
Rule 39    join_search_condition -> comparison_predicate
Rule 40    search_condition -> search_condition OR search_condition
Rule 41    search_condition -> search_condition AND search_condition
Rule 42    search_condition -> LPAREN search_condition RPAREN
Rule 43    search_condition -> comparison_predicate
Rule 44    comparison_predicate -> value comp_op value
Rule 45    comp_op -> EQ
Rule 46    comp_op -> NEQ
Rule 47    comp_op -> GT
Rule 48    comp_op -> LT
Rule 49    id_list -> ID
Rule 50    id_list -> ID DOT ID
Rule 51    id_list -> id_list COMMA ID
Rule 52    id_list -> id_list COMMA ID DOT ID
Rule 53    inner_select_statement -> SELECT select_columns FROM id_list
Rule 54    inner_select_statement -> SELECT select_columns FROM id_list join_clause
Rule 55    inner_select_statement -> SELECT select_columns FROM id_list WHERE search_condition
Rule 56    inner_select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition
Rule 57    value -> ID
Rule 58    value -> ID DOT ID
Rule 59    value -> literal
Rule 60    value -> LPAREN inner_select_statement RPAREN
Rule 61    literal -> INT
Rule 62    literal -> DOUBLE
Rule 63    literal -> STRING

Terminals, with rules where they appear

ALL                  : 12
AND                  : 36 41
COMMA                : 15 51 52
DELETE               : 10 11
DOT                  : 34 50 52 58
DOUBLE               : 62
EOL                  : 4 5 6 7 8 9 10 11
EQ                   : 14 15 28 29 30 45
FROM                 : 6 7 8 9 10 11 53 54 55 56
GT                   : 19 20 21 47
ID                   : 4 5 10 11 14 15 16 17 31 32 33 34 34 49 50 50 51 52 52 57 58 58
INT                  : 61
JOIN                 : 16 17 31 32
LPAREN               : 38 42 60
LT                   : 22 23 24 48
NATURAL              : 16 17
NEQ                  : 25 26 27 46
ON                   : 19 20 21 22 23 24 25 26 27 28 29 30
OR                   : 37 40
RPAREN               : 38 42 60
SELECT               : 6 7 8 9 53 54 55 56
SET                  : 4 5
STRING               : 63
UPDATE               : 4 5
WHERE                : 5 8 9 11 55 56
error                : 

Nonterminals, with rules where they appear

comp_op              : 44
comparison_predicate : 39 43
delete_statement     : 3
id_list              : 6 7 8 9 13 51 52 53 54 55 56
inner_select_statement : 60
join_clause          : 7 9 17 20 23 26 29 54 56
join_list            : 18 19 20 21 22 23 24 25 26 27 28 29 30 32
join_search_condition : 21 24 27 30 36 37 38
join_value           : 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30
literal              : 14 15 35 59
search_condition     : 5 8 9 11 40 40 41 41 42 55 56
select_columns       : 6 7 8 9 53 54 55 56
select_statement     : 2
set_clause_list      : 4 5 15
statement            : 0
update_statement     : 1
value                : 44 44

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . update_statement
    (2) statement -> . select_statement
    (3) statement -> . delete_statement
    (4) update_statement -> . UPDATE ID SET set_clause_list EOL
    (5) update_statement -> . UPDATE ID SET set_clause_list WHERE search_condition EOL
    (6) select_statement -> . SELECT select_columns FROM id_list EOL
    (7) select_statement -> . SELECT select_columns FROM id_list join_clause EOL
    (8) select_statement -> . SELECT select_columns FROM id_list WHERE search_condition EOL
    (9) select_statement -> . SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
    (10) delete_statement -> . DELETE FROM ID EOL
    (11) delete_statement -> . DELETE FROM ID WHERE search_condition EOL

    UPDATE          shift and go to state 2
    SELECT          shift and go to state 6
    DELETE          shift and go to state 4

    delete_statement               shift and go to state 1
    statement                      shift and go to state 3
    update_statement               shift and go to state 5
    select_statement               shift and go to state 7

state 1

    (3) statement -> delete_statement .

    $end            reduce using rule 3 (statement -> delete_statement .)


state 2

    (4) update_statement -> UPDATE . ID SET set_clause_list EOL
    (5) update_statement -> UPDATE . ID SET set_clause_list WHERE search_condition EOL

    ID              shift and go to state 8


state 3

    (0) S' -> statement .



state 4

    (10) delete_statement -> DELETE . FROM ID EOL
    (11) delete_statement -> DELETE . FROM ID WHERE search_condition EOL

    FROM            shift and go to state 9


state 5

    (1) statement -> update_statement .

    $end            reduce using rule 1 (statement -> update_statement .)


state 6

    (6) select_statement -> SELECT . select_columns FROM id_list EOL
    (7) select_statement -> SELECT . select_columns FROM id_list join_clause EOL
    (8) select_statement -> SELECT . select_columns FROM id_list WHERE search_condition EOL
    (9) select_statement -> SELECT . select_columns FROM id_list join_clause WHERE search_condition EOL
    (12) select_columns -> . ALL
    (13) select_columns -> . id_list
    (49) id_list -> . ID
    (50) id_list -> . ID DOT ID
    (51) id_list -> . id_list COMMA ID
    (52) id_list -> . id_list COMMA ID DOT ID

    ALL             shift and go to state 11
    ID              shift and go to state 10

    select_columns                 shift and go to state 12
    id_list                        shift and go to state 13

state 7

    (2) statement -> select_statement .

    $end            reduce using rule 2 (statement -> select_statement .)


state 8

    (4) update_statement -> UPDATE ID . SET set_clause_list EOL
    (5) update_statement -> UPDATE ID . SET set_clause_list WHERE search_condition EOL

    SET             shift and go to state 14


state 9

    (10) delete_statement -> DELETE FROM . ID EOL
    (11) delete_statement -> DELETE FROM . ID WHERE search_condition EOL

    ID              shift and go to state 15


state 10

    (49) id_list -> ID .
    (50) id_list -> ID . DOT ID

    WHERE           reduce using rule 49 (id_list -> ID .)
    COMMA           reduce using rule 49 (id_list -> ID .)
    NATURAL         reduce using rule 49 (id_list -> ID .)
    JOIN            reduce using rule 49 (id_list -> ID .)
    RPAREN          reduce using rule 49 (id_list -> ID .)
    EOL             reduce using rule 49 (id_list -> ID .)
    FROM            reduce using rule 49 (id_list -> ID .)
    DOT             shift and go to state 16


state 11

    (12) select_columns -> ALL .

    FROM            reduce using rule 12 (select_columns -> ALL .)


state 12

    (6) select_statement -> SELECT select_columns . FROM id_list EOL
    (7) select_statement -> SELECT select_columns . FROM id_list join_clause EOL
    (8) select_statement -> SELECT select_columns . FROM id_list WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns . FROM id_list join_clause WHERE search_condition EOL

    FROM            shift and go to state 17


state 13

    (13) select_columns -> id_list .
    (51) id_list -> id_list . COMMA ID
    (52) id_list -> id_list . COMMA ID DOT ID

    FROM            reduce using rule 13 (select_columns -> id_list .)
    COMMA           shift and go to state 18


state 14

    (4) update_statement -> UPDATE ID SET . set_clause_list EOL
    (5) update_statement -> UPDATE ID SET . set_clause_list WHERE search_condition EOL
    (14) set_clause_list -> . ID EQ literal
    (15) set_clause_list -> . ID EQ literal COMMA set_clause_list

    ID              shift and go to state 19

    set_clause_list                shift and go to state 20

state 15

    (10) delete_statement -> DELETE FROM ID . EOL
    (11) delete_statement -> DELETE FROM ID . WHERE search_condition EOL

    EOL             shift and go to state 22
    WHERE           shift and go to state 21


state 16

    (50) id_list -> ID DOT . ID

    ID              shift and go to state 23


state 17

    (6) select_statement -> SELECT select_columns FROM . id_list EOL
    (7) select_statement -> SELECT select_columns FROM . id_list join_clause EOL
    (8) select_statement -> SELECT select_columns FROM . id_list WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns FROM . id_list join_clause WHERE search_condition EOL
    (49) id_list -> . ID
    (50) id_list -> . ID DOT ID
    (51) id_list -> . id_list COMMA ID
    (52) id_list -> . id_list COMMA ID DOT ID

    ID              shift and go to state 10

    id_list                        shift and go to state 24

state 18

    (51) id_list -> id_list COMMA . ID
    (52) id_list -> id_list COMMA . ID DOT ID

    ID              shift and go to state 25


state 19

    (14) set_clause_list -> ID . EQ literal
    (15) set_clause_list -> ID . EQ literal COMMA set_clause_list

    EQ              shift and go to state 26


state 20

    (4) update_statement -> UPDATE ID SET set_clause_list . EOL
    (5) update_statement -> UPDATE ID SET set_clause_list . WHERE search_condition EOL

    EOL             shift and go to state 28
    WHERE           shift and go to state 27


state 21

    (11) delete_statement -> DELETE FROM ID WHERE . search_condition EOL
    (40) search_condition -> . search_condition OR search_condition
    (41) search_condition -> . search_condition AND search_condition
    (42) search_condition -> . LPAREN search_condition RPAREN
    (43) search_condition -> . comparison_predicate
    (44) comparison_predicate -> . value comp_op value
    (57) value -> . ID
    (58) value -> . ID DOT ID
    (59) value -> . literal
    (60) value -> . LPAREN inner_select_statement RPAREN
    (61) literal -> . INT
    (62) literal -> . DOUBLE
    (63) literal -> . STRING

    LPAREN          shift and go to state 37
    ID              shift and go to state 30
    INT             shift and go to state 29
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 32

    search_condition               shift and go to state 31
    comparison_predicate           shift and go to state 34
    value                          shift and go to state 36
    literal                        shift and go to state 35

state 22

    (10) delete_statement -> DELETE FROM ID EOL .

    $end            reduce using rule 10 (delete_statement -> DELETE FROM ID EOL .)


state 23

    (50) id_list -> ID DOT ID .

    WHERE           reduce using rule 50 (id_list -> ID DOT ID .)
    COMMA           reduce using rule 50 (id_list -> ID DOT ID .)
    NATURAL         reduce using rule 50 (id_list -> ID DOT ID .)
    JOIN            reduce using rule 50 (id_list -> ID DOT ID .)
    RPAREN          reduce using rule 50 (id_list -> ID DOT ID .)
    EOL             reduce using rule 50 (id_list -> ID DOT ID .)
    FROM            reduce using rule 50 (id_list -> ID DOT ID .)


state 24

    (6) select_statement -> SELECT select_columns FROM id_list . EOL
    (7) select_statement -> SELECT select_columns FROM id_list . join_clause EOL
    (8) select_statement -> SELECT select_columns FROM id_list . WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns FROM id_list . join_clause WHERE search_condition EOL
    (51) id_list -> id_list . COMMA ID
    (52) id_list -> id_list . COMMA ID DOT ID
    (16) join_clause -> . NATURAL JOIN ID
    (17) join_clause -> . NATURAL JOIN ID join_clause
    (18) join_clause -> . join_list
    (19) join_clause -> . join_list ON join_value GT join_value
    (20) join_clause -> . join_list ON join_value GT join_value join_clause
    (21) join_clause -> . join_list ON join_value GT join_value join_search_condition
    (22) join_clause -> . join_list ON join_value LT join_value
    (23) join_clause -> . join_list ON join_value LT join_value join_clause
    (24) join_clause -> . join_list ON join_value LT join_value join_search_condition
    (25) join_clause -> . join_list ON join_value NEQ join_value
    (26) join_clause -> . join_list ON join_value NEQ join_value join_clause
    (27) join_clause -> . join_list ON join_value NEQ join_value join_search_condition
    (28) join_clause -> . join_list ON join_value EQ join_value
    (29) join_clause -> . join_list ON join_value EQ join_value join_clause
    (30) join_clause -> . join_list ON join_value EQ join_value join_search_condition
    (31) join_list -> . JOIN ID
    (32) join_list -> . JOIN ID join_list

    EOL             shift and go to state 43
    WHERE           shift and go to state 41
    COMMA           shift and go to state 18
    NATURAL         shift and go to state 40
    JOIN            shift and go to state 38

    join_list                      shift and go to state 42
    join_clause                    shift and go to state 39

state 25

    (51) id_list -> id_list COMMA ID .
    (52) id_list -> id_list COMMA ID . DOT ID

    WHERE           reduce using rule 51 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 51 (id_list -> id_list COMMA ID .)
    NATURAL         reduce using rule 51 (id_list -> id_list COMMA ID .)
    JOIN            reduce using rule 51 (id_list -> id_list COMMA ID .)
    RPAREN          reduce using rule 51 (id_list -> id_list COMMA ID .)
    EOL             reduce using rule 51 (id_list -> id_list COMMA ID .)
    FROM            reduce using rule 51 (id_list -> id_list COMMA ID .)
    DOT             shift and go to state 44


state 26

    (14) set_clause_list -> ID EQ . literal
    (15) set_clause_list -> ID EQ . literal COMMA set_clause_list
    (61) literal -> . INT
    (62) literal -> . DOUBLE
    (63) literal -> . STRING

    INT             shift and go to state 29
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 32

    literal                        shift and go to state 45

state 27

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE . search_condition EOL
    (40) search_condition -> . search_condition OR search_condition
    (41) search_condition -> . search_condition AND search_condition
    (42) search_condition -> . LPAREN search_condition RPAREN
    (43) search_condition -> . comparison_predicate
    (44) comparison_predicate -> . value comp_op value
    (57) value -> . ID
    (58) value -> . ID DOT ID
    (59) value -> . literal
    (60) value -> . LPAREN inner_select_statement RPAREN
    (61) literal -> . INT
    (62) literal -> . DOUBLE
    (63) literal -> . STRING

    LPAREN          shift and go to state 37
    ID              shift and go to state 30
    INT             shift and go to state 29
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 32

    search_condition               shift and go to state 46
    literal                        shift and go to state 35
    comparison_predicate           shift and go to state 34
    value                          shift and go to state 36

state 28

    (4) update_statement -> UPDATE ID SET set_clause_list EOL .

    $end            reduce using rule 4 (update_statement -> UPDATE ID SET set_clause_list EOL .)


state 29

    (61) literal -> INT .

    EQ              reduce using rule 61 (literal -> INT .)
    NEQ             reduce using rule 61 (literal -> INT .)
    GT              reduce using rule 61 (literal -> INT .)
    LT              reduce using rule 61 (literal -> INT .)
    NATURAL         reduce using rule 61 (literal -> INT .)
    AND             reduce using rule 61 (literal -> INT .)
    OR              reduce using rule 61 (literal -> INT .)
    LPAREN          reduce using rule 61 (literal -> INT .)
    JOIN            reduce using rule 61 (literal -> INT .)
    ID              reduce using rule 61 (literal -> INT .)
    INT             reduce using rule 61 (literal -> INT .)
    DOUBLE          reduce using rule 61 (literal -> INT .)
    STRING          reduce using rule 61 (literal -> INT .)
    EOL             reduce using rule 61 (literal -> INT .)
    WHERE           reduce using rule 61 (literal -> INT .)
    RPAREN          reduce using rule 61 (literal -> INT .)
    COMMA           reduce using rule 61 (literal -> INT .)


state 30

    (57) value -> ID .
    (58) value -> ID . DOT ID

    EQ              reduce using rule 57 (value -> ID .)
    NEQ             reduce using rule 57 (value -> ID .)
    GT              reduce using rule 57 (value -> ID .)
    LT              reduce using rule 57 (value -> ID .)
    EOL             reduce using rule 57 (value -> ID .)
    OR              reduce using rule 57 (value -> ID .)
    AND             reduce using rule 57 (value -> ID .)
    RPAREN          reduce using rule 57 (value -> ID .)
    WHERE           reduce using rule 57 (value -> ID .)
    DOT             shift and go to state 47


state 31

    (11) delete_statement -> DELETE FROM ID WHERE search_condition . EOL
    (40) search_condition -> search_condition . OR search_condition
    (41) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 50
    OR              shift and go to state 48
    AND             shift and go to state 49


state 32

    (63) literal -> STRING .

    EQ              reduce using rule 63 (literal -> STRING .)
    NEQ             reduce using rule 63 (literal -> STRING .)
    GT              reduce using rule 63 (literal -> STRING .)
    LT              reduce using rule 63 (literal -> STRING .)
    NATURAL         reduce using rule 63 (literal -> STRING .)
    AND             reduce using rule 63 (literal -> STRING .)
    OR              reduce using rule 63 (literal -> STRING .)
    LPAREN          reduce using rule 63 (literal -> STRING .)
    JOIN            reduce using rule 63 (literal -> STRING .)
    ID              reduce using rule 63 (literal -> STRING .)
    INT             reduce using rule 63 (literal -> STRING .)
    DOUBLE          reduce using rule 63 (literal -> STRING .)
    STRING          reduce using rule 63 (literal -> STRING .)
    EOL             reduce using rule 63 (literal -> STRING .)
    WHERE           reduce using rule 63 (literal -> STRING .)
    RPAREN          reduce using rule 63 (literal -> STRING .)
    COMMA           reduce using rule 63 (literal -> STRING .)


state 33

    (62) literal -> DOUBLE .

    EQ              reduce using rule 62 (literal -> DOUBLE .)
    NEQ             reduce using rule 62 (literal -> DOUBLE .)
    GT              reduce using rule 62 (literal -> DOUBLE .)
    LT              reduce using rule 62 (literal -> DOUBLE .)
    NATURAL         reduce using rule 62 (literal -> DOUBLE .)
    AND             reduce using rule 62 (literal -> DOUBLE .)
    OR              reduce using rule 62 (literal -> DOUBLE .)
    LPAREN          reduce using rule 62 (literal -> DOUBLE .)
    JOIN            reduce using rule 62 (literal -> DOUBLE .)
    ID              reduce using rule 62 (literal -> DOUBLE .)
    INT             reduce using rule 62 (literal -> DOUBLE .)
    DOUBLE          reduce using rule 62 (literal -> DOUBLE .)
    STRING          reduce using rule 62 (literal -> DOUBLE .)
    EOL             reduce using rule 62 (literal -> DOUBLE .)
    WHERE           reduce using rule 62 (literal -> DOUBLE .)
    RPAREN          reduce using rule 62 (literal -> DOUBLE .)
    COMMA           reduce using rule 62 (literal -> DOUBLE .)


state 34

    (43) search_condition -> comparison_predicate .

    OR              reduce using rule 43 (search_condition -> comparison_predicate .)
    AND             reduce using rule 43 (search_condition -> comparison_predicate .)
    EOL             reduce using rule 43 (search_condition -> comparison_predicate .)
    RPAREN          reduce using rule 43 (search_condition -> comparison_predicate .)


state 35

    (59) value -> literal .

    EQ              reduce using rule 59 (value -> literal .)
    NEQ             reduce using rule 59 (value -> literal .)
    GT              reduce using rule 59 (value -> literal .)
    LT              reduce using rule 59 (value -> literal .)
    EOL             reduce using rule 59 (value -> literal .)
    OR              reduce using rule 59 (value -> literal .)
    AND             reduce using rule 59 (value -> literal .)
    RPAREN          reduce using rule 59 (value -> literal .)
    WHERE           reduce using rule 59 (value -> literal .)


state 36

    (44) comparison_predicate -> value . comp_op value
    (45) comp_op -> . EQ
    (46) comp_op -> . NEQ
    (47) comp_op -> . GT
    (48) comp_op -> . LT

    EQ              shift and go to state 55
    NEQ             shift and go to state 52
    GT              shift and go to state 53
    LT              shift and go to state 51

    comp_op                        shift and go to state 54

state 37

    (42) search_condition -> LPAREN . search_condition RPAREN
    (60) value -> LPAREN . inner_select_statement RPAREN
    (40) search_condition -> . search_condition OR search_condition
    (41) search_condition -> . search_condition AND search_condition
    (42) search_condition -> . LPAREN search_condition RPAREN
    (43) search_condition -> . comparison_predicate
    (53) inner_select_statement -> . SELECT select_columns FROM id_list
    (54) inner_select_statement -> . SELECT select_columns FROM id_list join_clause
    (55) inner_select_statement -> . SELECT select_columns FROM id_list WHERE search_condition
    (56) inner_select_statement -> . SELECT select_columns FROM id_list join_clause WHERE search_condition
    (44) comparison_predicate -> . value comp_op value
    (57) value -> . ID
    (58) value -> . ID DOT ID
    (59) value -> . literal
    (60) value -> . LPAREN inner_select_statement RPAREN
    (61) literal -> . INT
    (62) literal -> . DOUBLE
    (63) literal -> . STRING

    LPAREN          shift and go to state 37
    SELECT          shift and go to state 58
    ID              shift and go to state 30
    INT             shift and go to state 29
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 32

    search_condition               shift and go to state 56
    comparison_predicate           shift and go to state 34
    literal                        shift and go to state 35
    inner_select_statement         shift and go to state 57
    value                          shift and go to state 36

state 38

    (31) join_list -> JOIN . ID
    (32) join_list -> JOIN . ID join_list

    ID              shift and go to state 59


state 39

    (7) select_statement -> SELECT select_columns FROM id_list join_clause . EOL
    (9) select_statement -> SELECT select_columns FROM id_list join_clause . WHERE search_condition EOL

    EOL             shift and go to state 61
    WHERE           shift and go to state 60


state 40

    (16) join_clause -> NATURAL . JOIN ID
    (17) join_clause -> NATURAL . JOIN ID join_clause

    JOIN            shift and go to state 62


state 41

    (8) select_statement -> SELECT select_columns FROM id_list WHERE . search_condition EOL
    (40) search_condition -> . search_condition OR search_condition
    (41) search_condition -> . search_condition AND search_condition
    (42) search_condition -> . LPAREN search_condition RPAREN
    (43) search_condition -> . comparison_predicate
    (44) comparison_predicate -> . value comp_op value
    (57) value -> . ID
    (58) value -> . ID DOT ID
    (59) value -> . literal
    (60) value -> . LPAREN inner_select_statement RPAREN
    (61) literal -> . INT
    (62) literal -> . DOUBLE
    (63) literal -> . STRING

    LPAREN          shift and go to state 37
    ID              shift and go to state 30
    INT             shift and go to state 29
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 32

    search_condition               shift and go to state 63
    comparison_predicate           shift and go to state 34
    literal                        shift and go to state 35
    value                          shift and go to state 36

state 42

    (18) join_clause -> join_list .
    (19) join_clause -> join_list . ON join_value GT join_value
    (20) join_clause -> join_list . ON join_value GT join_value join_clause
    (21) join_clause -> join_list . ON join_value GT join_value join_search_condition
    (22) join_clause -> join_list . ON join_value LT join_value
    (23) join_clause -> join_list . ON join_value LT join_value join_clause
    (24) join_clause -> join_list . ON join_value LT join_value join_search_condition
    (25) join_clause -> join_list . ON join_value NEQ join_value
    (26) join_clause -> join_list . ON join_value NEQ join_value join_clause
    (27) join_clause -> join_list . ON join_value NEQ join_value join_search_condition
    (28) join_clause -> join_list . ON join_value EQ join_value
    (29) join_clause -> join_list . ON join_value EQ join_value join_clause
    (30) join_clause -> join_list . ON join_value EQ join_value join_search_condition

    EOL             reduce using rule 18 (join_clause -> join_list .)
    WHERE           reduce using rule 18 (join_clause -> join_list .)
    RPAREN          reduce using rule 18 (join_clause -> join_list .)
    ON              shift and go to state 64


state 43

    (6) select_statement -> SELECT select_columns FROM id_list EOL .

    $end            reduce using rule 6 (select_statement -> SELECT select_columns FROM id_list EOL .)


state 44

    (52) id_list -> id_list COMMA ID DOT . ID

    ID              shift and go to state 65


state 45

    (14) set_clause_list -> ID EQ literal .
    (15) set_clause_list -> ID EQ literal . COMMA set_clause_list

    EOL             reduce using rule 14 (set_clause_list -> ID EQ literal .)
    WHERE           reduce using rule 14 (set_clause_list -> ID EQ literal .)
    COMMA           shift and go to state 66


state 46

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE search_condition . EOL
    (40) search_condition -> search_condition . OR search_condition
    (41) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 67
    OR              shift and go to state 48
    AND             shift and go to state 49


state 47

    (58) value -> ID DOT . ID

    ID              shift and go to state 68


state 48

    (40) search_condition -> search_condition OR . search_condition
    (40) search_condition -> . search_condition OR search_condition
    (41) search_condition -> . search_condition AND search_condition
    (42) search_condition -> . LPAREN search_condition RPAREN
    (43) search_condition -> . comparison_predicate
    (44) comparison_predicate -> . value comp_op value
    (57) value -> . ID
    (58) value -> . ID DOT ID
    (59) value -> . literal
    (60) value -> . LPAREN inner_select_statement RPAREN
    (61) literal -> . INT
    (62) literal -> . DOUBLE
    (63) literal -> . STRING

    LPAREN          shift and go to state 37
    ID              shift and go to state 30
    INT             shift and go to state 29
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 32

    search_condition               shift and go to state 69
    comparison_predicate           shift and go to state 34
    value                          shift and go to state 36
    literal                        shift and go to state 35

state 49

    (41) search_condition -> search_condition AND . search_condition
    (40) search_condition -> . search_condition OR search_condition
    (41) search_condition -> . search_condition AND search_condition
    (42) search_condition -> . LPAREN search_condition RPAREN
    (43) search_condition -> . comparison_predicate
    (44) comparison_predicate -> . value comp_op value
    (57) value -> . ID
    (58) value -> . ID DOT ID
    (59) value -> . literal
    (60) value -> . LPAREN inner_select_statement RPAREN
    (61) literal -> . INT
    (62) literal -> . DOUBLE
    (63) literal -> . STRING

    LPAREN          shift and go to state 37
    ID              shift and go to state 30
    INT             shift and go to state 29
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 32

    search_condition               shift and go to state 70
    comparison_predicate           shift and go to state 34
    value                          shift and go to state 36
    literal                        shift and go to state 35

state 50

    (11) delete_statement -> DELETE FROM ID WHERE search_condition EOL .

    $end            reduce using rule 11 (delete_statement -> DELETE FROM ID WHERE search_condition EOL .)


state 51

    (48) comp_op -> LT .

    ID              reduce using rule 48 (comp_op -> LT .)
    LPAREN          reduce using rule 48 (comp_op -> LT .)
    INT             reduce using rule 48 (comp_op -> LT .)
    DOUBLE          reduce using rule 48 (comp_op -> LT .)
    STRING          reduce using rule 48 (comp_op -> LT .)


state 52

    (46) comp_op -> NEQ .

    ID              reduce using rule 46 (comp_op -> NEQ .)
    LPAREN          reduce using rule 46 (comp_op -> NEQ .)
    INT             reduce using rule 46 (comp_op -> NEQ .)
    DOUBLE          reduce using rule 46 (comp_op -> NEQ .)
    STRING          reduce using rule 46 (comp_op -> NEQ .)


state 53

    (47) comp_op -> GT .

    ID              reduce using rule 47 (comp_op -> GT .)
    LPAREN          reduce using rule 47 (comp_op -> GT .)
    INT             reduce using rule 47 (comp_op -> GT .)
    DOUBLE          reduce using rule 47 (comp_op -> GT .)
    STRING          reduce using rule 47 (comp_op -> GT .)


state 54

    (44) comparison_predicate -> value comp_op . value
    (57) value -> . ID
    (58) value -> . ID DOT ID
    (59) value -> . literal
    (60) value -> . LPAREN inner_select_statement RPAREN
    (61) literal -> . INT
    (62) literal -> . DOUBLE
    (63) literal -> . STRING

    ID              shift and go to state 30
    LPAREN          shift and go to state 71
    INT             shift and go to state 29
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 32

    value                          shift and go to state 72
    literal                        shift and go to state 35

state 55

    (45) comp_op -> EQ .

    ID              reduce using rule 45 (comp_op -> EQ .)
    LPAREN          reduce using rule 45 (comp_op -> EQ .)
    INT             reduce using rule 45 (comp_op -> EQ .)
    DOUBLE          reduce using rule 45 (comp_op -> EQ .)
    STRING          reduce using rule 45 (comp_op -> EQ .)


state 56

    (42) search_condition -> LPAREN search_condition . RPAREN
    (40) search_condition -> search_condition . OR search_condition
    (41) search_condition -> search_condition . AND search_condition

    RPAREN          shift and go to state 73
    OR              shift and go to state 48
    AND             shift and go to state 49


state 57

    (60) value -> LPAREN inner_select_statement . RPAREN

    RPAREN          shift and go to state 74


state 58

    (53) inner_select_statement -> SELECT . select_columns FROM id_list
    (54) inner_select_statement -> SELECT . select_columns FROM id_list join_clause
    (55) inner_select_statement -> SELECT . select_columns FROM id_list WHERE search_condition
    (56) inner_select_statement -> SELECT . select_columns FROM id_list join_clause WHERE search_condition
    (12) select_columns -> . ALL
    (13) select_columns -> . id_list
    (49) id_list -> . ID
    (50) id_list -> . ID DOT ID
    (51) id_list -> . id_list COMMA ID
    (52) id_list -> . id_list COMMA ID DOT ID

    ALL             shift and go to state 11
    ID              shift and go to state 10

    select_columns                 shift and go to state 75
    id_list                        shift and go to state 13

state 59

    (31) join_list -> JOIN ID .
    (32) join_list -> JOIN ID . join_list
    (31) join_list -> . JOIN ID
    (32) join_list -> . JOIN ID join_list

    ON              reduce using rule 31 (join_list -> JOIN ID .)
    EOL             reduce using rule 31 (join_list -> JOIN ID .)
    WHERE           reduce using rule 31 (join_list -> JOIN ID .)
    RPAREN          reduce using rule 31 (join_list -> JOIN ID .)
    JOIN            shift and go to state 38

    join_list                      shift and go to state 76

state 60

    (9) select_statement -> SELECT select_columns FROM id_list join_clause WHERE . search_condition EOL
    (40) search_condition -> . search_condition OR search_condition
    (41) search_condition -> . search_condition AND search_condition
    (42) search_condition -> . LPAREN search_condition RPAREN
    (43) search_condition -> . comparison_predicate
    (44) comparison_predicate -> . value comp_op value
    (57) value -> . ID
    (58) value -> . ID DOT ID
    (59) value -> . literal
    (60) value -> . LPAREN inner_select_statement RPAREN
    (61) literal -> . INT
    (62) literal -> . DOUBLE
    (63) literal -> . STRING

    LPAREN          shift and go to state 37
    ID              shift and go to state 30
    INT             shift and go to state 29
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 32

    search_condition               shift and go to state 77
    comparison_predicate           shift and go to state 34
    literal                        shift and go to state 35
    value                          shift and go to state 36

state 61

    (7) select_statement -> SELECT select_columns FROM id_list join_clause EOL .

    $end            reduce using rule 7 (select_statement -> SELECT select_columns FROM id_list join_clause EOL .)


state 62

    (16) join_clause -> NATURAL JOIN . ID
    (17) join_clause -> NATURAL JOIN . ID join_clause

    ID              shift and go to state 78


state 63

    (8) select_statement -> SELECT select_columns FROM id_list WHERE search_condition . EOL
    (40) search_condition -> search_condition . OR search_condition
    (41) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 79
    OR              shift and go to state 48
    AND             shift and go to state 49


state 64
